--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ click>=8.1.0
 flask>=3.0.0
 flask-socketio>=5.3.0
 flask-cors>=4.0.0
+flask-session>=0.5.0
 croniter>=2.0.0
 python-socketio>=5.10.0
 psutil>=5.9.0
+python-pam>=2.0.2
